--- a/css/style.css
+++ b/css/style.css
@@ -1488,7 +1488,7 @@ button:hover{
 
 .div-imagen img{
 	height: 80px;
-	/*margin:-65px 0 0 -100px;*/
+	max-width: 220px;
 }
 
 .img-wrapper {
@@ -1509,8 +1509,8 @@ button:hover{
 .img-wrapper2 {
 	height:80px; 
 	width:80px; 
-	border-radius:80px; 
-	border:4px solid white; 
+	/*border-radius:80px; 
+	/*border:4px solid white; */
 	overflow:hidden;
 	margin: 0 auto;
 
@@ -1530,7 +1530,7 @@ button:hover{
 		-webkit-transition: all 0.5s ease-out;
 	transition: all 0.5s ease-out;
 
-	border:4px solid #A1CA4A; 
+	/*border:4px solid #A1CA4A; */
 }
 
 .box p{
@@ -1893,20 +1893,10 @@ button:hover{
 
 .proyecto-img{
 	float: left !important;
-	width: 80px;
 	height: 80px;
 	display: inline-block;
-	margin-right: 20px !important;
-	margin-top: 10px !important;
+	margin-right: 10px !important;
 	margin-bottom: 10px !important;
-}
-
-.proyecto-img .img-wrapper{
-	float: left;
-	margin-left: 0 !important;
-	margin-right: 0 !important;
-	margin-bottom: 0 !important;
-	margin-top: 0 !important;
 }
 
 .proyecto-titulo{
