--- a/css/style.css
+++ b/css/style.css
@@ -124,9 +124,22 @@ button:hover{
 	display: block;
 }
 
+@media screen and (max-width:960px) { 
+	#main{
+		margin-bottom: 20px;
+	}
+	.logo {
+	    float: left;
+	    height: 70px !important;
+	    margin-left: 5%;
+	    margin-top: 18px;
+	}
+}
+
 .disclaim{
 	position: fixed;
-	display: table;
+	background-color: #f7991c;
+	display: block;
 	vertical-align: middle;
 	width: 100%;
 	margin: 0;
@@ -135,14 +148,13 @@ button:hover{
 }
 
 .disclaim div{
-	display: table-cell;
+	display: block;
 	vertical-align: middle;
 	width: 100%;
 }
 
 .disclaim div p{
 	font-size: 15px;
-	background-color: #f7991c;
 	padding: 7px;
 	color: #fff;
 }
@@ -578,6 +590,13 @@ button:hover{
 
 .panel li:before {
     content: "• ";
+    font-size: 17px;
+    font-weight: bold;
+    color: #A1CA4A; 
+}
+
+.panel .hijo li:before {
+    content: "";
     font-size: 17px;
     font-weight: bold;
     color: #A1CA4A; 
@@ -1519,8 +1538,8 @@ button:hover{
 }
 
 .div-imagen img{
-	height: 80px;
-	max-width: 220px;
+	max-height: 70px;
+	max-width: 120px;
 }
 
 .box p{
@@ -1805,6 +1824,7 @@ button:hover{
 	border-bottom: 2px solid #fff;
 	padding-bottom: 10px;
 	cursor: pointer;
+	vertical-align: middle;
 
 		-o-transition: all 6s ease-out;
 		-ms-transition: all 6s ease-out;
@@ -1813,7 +1833,9 @@ button:hover{
 	transition: all 6s ease-out;
 }
 
-.mis-proyectos td:hover{
+.columna1:hover,
+.columna2:hover,
+.columna3:hover{
 		-o-transition: all 2s ease-out;
 		-ms-transition: all 2s ease-out;
 		-moz-transition: all 2s ease-out;
@@ -1821,16 +1843,11 @@ button:hover{
 	transition: all 2s ease-out;
 
 	border-bottom: 2px solid #A1CA4A;
-}
 
-.mis-proyectos td:hover .proyecto-img .img-wrapper{
-		-o-transition: all 0.5s ease-out;
-		-ms-transition: all 0.5s ease-out;
-		-moz-transition: all 0.5s ease-out;
-		-webkit-transition: all 0.5s ease-out;
-	transition: all 0.5s ease-out;
-
-	border: 4px solid #A1CA4A;
+	animation: selected-border 7s infinite;
+		-moz-animation: selected-border 7s infinite;
+		-webkit-animation: selected-border 7s infinite;
+		-o-animation: selected-border 7s infinite;
 }
 
 .td3{
@@ -1881,12 +1898,24 @@ button:hover{
 	height: 100%;
 }
 
+.proyecto-detalles{
+	width: 100%;
+	border-collapse: collapse;
+	border-width: 0 !important;
+}
+
+.proyecto-detalles td{
+	vertical-align: middle;
+}
+
 .proyecto-img{
-	float: left !important;
-	height: 80px;
-	display: inline-block;
-	margin-right: 10px !important;
-	margin-bottom: 10px !important;
+	width: 200px; 
+	text-align: center;
+}
+
+.proyecto-img img{
+	max-height: 80px;
+	max-width: 180px;
 }
 
 .proyecto-titulo{
