--- a/css/jquery.mCustomScrollbar.css
+++ b/css/jquery.mCustomScrollbar.css
@@ -158,9 +158,10 @@
 	filter:"alpha(opacity=100)"; -ms-filter:"alpha(opacity=100)"; /* old ie */
 }
 .mCSB_scrollTools .mCSB_draggerRail{
-	background:#000; /* rgba fallback */
+	background: transparent;
+	/*background:#000; 
 	background:rgba(0,0,0,0.4);
-	filter:"alpha(opacity=40)"; -ms-filter:"alpha(opacity=40)"; /* old ie */
+	filter:"alpha(opacity=40)"; -ms-filter:"alpha(opacity=40)"; *//* old ie */
 }
 .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar{
 	background:#dedede; /* rgba fallback */
@@ -231,25 +232,25 @@
 * MODIFICADO PARA ESCALA
 */
 .mCS-dark-thick>.mCSB_scrollTools .mCSB_draggerRail{
-	width:2px;
-	background:#dedede; /* rgba fallback */
+	/*width:2px;
+	background:#dedede; 
 	background:rgba(222, 222, 222, .5);
 		-webkit-border-radius:2px;
 		-moz-border-radius:2px;
 		-ms-border-radius:2px;
 		-o-border-radius:2px;
-	border-radius:2px;
+	border-radius:2px;*/
 }
 
 .mCS-dark-thick>.mCSB_scrollTools .mCSB_draggerRail:hover{
-	background:#F7991C; /* rgba fallback */
+	/*background:#F7991C;
 	background:rgba(97%, 60%, 11%,.3);
 
 		-webkit-transition: all 0.7s ease-out;
 		-moz-transition: all 0.7s ease-out;
 		-ms-transition: all 0.7s ease-out;
 		-o-transition: all 0.7s ease-out;
-	transition: all 0.7s ease-out;
+	transition: all 0.7s ease-out;*/
 }
 
 .mCS-dark-thick>.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar{
